# moonlight-android

./: fix-ndk.patch  leia-3d.patch
.github/workflows/: main.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/limelight/: LeiaHelper.java
app/src/main/java/com/limelight/binding/video/: MediaCodecDecoderRenderer.java
app/src/main/jni/: Android.mk  leia_jni.cpp  leia_jni.mk  leia_stub.cpp
